syntax = "proto3";
package protomitch;

message MitchMsg {
  oneof value {
    PingMsg   ping = 1;
    FailedMsg failed = 2;
    JoinMsg   join = 3;
    PullMsg   pull = 4;
    SyncMsg   sync = 5;
  }
}

message PingMsg {
}

message FailedMsg {
  uint32 id = 1;
}

message JoinMsg {
  uint32 id = 1;
  string nickname = 2;
  oneof address {
    uint32 ipv4 = 3;
    uint64 ipv6 = 4;
  };
  uint32 port = 5;
  uint32 min_proto = 6;
  uint32 max_proto = 7;
}

message PullMsg {
  uint32 num_members = 1;
}

message SyncMsg {
  repeated JoinMsg members = 1;
}